--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   --bg-color: #080808;
   --second-bg-color: #101010;
   --text-color: white;
-  --main-color: #ea580c;
+  --main-color: #04fffb;
 }
 
 html {
