--- a/src/components/App.css
+++ b/src/components/App.css
@@ -69,7 +69,7 @@ span {
 
 section {
   min-height: 100vh;
-  padding: 10rem 10%;
+  padding: 10rem 9%;
 }
 
 .home {
@@ -382,7 +382,9 @@ section {
 
 .footer ul {
   text-align: center;
-  font-size: 1.8rem;
+  font-size: 1.7rem;
+  padding-left: 0;
+  display: flex;
 }
 
 .footer ul li {
@@ -403,7 +405,7 @@ section {
 .footer .copyright {
   text-align: center;
   margin-top: 40px;
-  font-size: 16px;
+  font-size: 14px;
 }
 
 .navbar {
