--- a/src/components/App.css
+++ b/src/components/App.css
@@ -456,7 +456,7 @@ section {
   backdrop-filter: blur(8px);
   opacity: 0;
   visibility: hidden;
-  transition: opacity 450ms ease, visibility 450ms ease;
+  transition: opacity 3s ease, visibility 3s ease;
   pointer-events: none;
   overflow: hidden;
 }
@@ -483,7 +483,7 @@ section {
   visibility: hidden;
   pointer-events: none;
   transform: translateX(100%);
-  transition: transform 450ms ease, opacity 450ms ease, visibility 450ms ease;
+  transition: transform 9s ease, opacity 9s ease, visibility 9s ease;
   overflow: hidden;
 }
 
@@ -520,7 +520,7 @@ section {
 .mob-nav-link {
   transition: color 0.3s ease;
   text-decoration: none;
-  font-size: 2.3rem;
+  font-size: 2rem;
   color: white;
 }
 
