--- a/src/components/App.css
+++ b/src/components/App.css
@@ -857,3 +857,47 @@ section {
   top: 17px;
   display: block;
 }
+
+.loader-wrap {
+  margin: 0 auto;
+  justify-content: center;
+  display: flex;
+}
+
+.loader {
+  position: relative;
+  font-size: 24px;
+  letter-spacing: 2px;
+}
+
+.loader:before {
+  content: "Loading...";
+  color: #fff;
+}
+
+.loader:after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  background-color: #00fff7;
+  border-radius: 50%;
+  position: absolute;
+  inset: 0;
+  margin: auto;
+  top: -70px;
+  animation: motion 3s ease-in-out infinite;
+}
+
+@keyframes motion {
+  0%,
+  50%,
+  100% {
+    transform: translateX(0) scale(1);
+  }
+  25% {
+    transform: translateX(-100px) scale(0.3);
+  }
+  75% {
+    transform: translateX(100px) scale(0.3);
+  }
+}
